--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -2,26 +2,25 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
-}
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
+/* Estilizando a barra de rolagem do WebKit */
+::-webkit-scrollbar {
+    width: 10px; /* Largura da barra de rolagem vertical */
+    height: 10px; /* Altura da barra de rolagem horizontal */
   }
-}
-
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
-}
+  
+  /* Estilizando o traço da barra de rolagem */
+  ::-webkit-scrollbar-track {
+    background-color: #f1f1f1; /* Cor de fundo do traço da barra de rolagem */
+  }
+  
+  /* Estilizando o polegar (handle) da barra de rolagem */
+  ::-webkit-scrollbar-thumb {
+    background-color: #ABD1B5; /* Cor do polegar da barra de rolagem */
+    border-radius: 5px; /* Raio de borda do polegar da barra de rolagem */
+  }
+  
+  /* Estilizando o polegar ao passar o mouse sobre a barra de rolagem */
+  ::-webkit-scrollbar-thumb:hover {
+    background-color: #79B791; /* Cor do polegar da barra de rolagem ao passar o mouse */
+  }
